<resources>
    <string name="app_name">GPA Calculator</string>
    <string name="enter_the_number_of_semesters">Enter the Number of Semesters:</string>
    <string name="enter_the_number_of_subjects">Enter the Number of Subjects:</string>
    <string name="calculate">Calculate</string>
    <string name="gpa_calculation">GPA Calculation</string>
    <string name="cgpa_calculation">CGPA Calculation</string>
    <string name="_1">1.</string>
    <string name="enter_gpa">Enter GPA</string>
    <string name="enter_credits">Enter Credits</string>
    <string name="a">A+</string>
    <string name="credit">Credit:</string>
    <string name="grade">Grade:</string>
    <string name="give_it_a_name">Give A Name Tag :</string>
    <string name="new_name">New Name :</string>
    <string name="new_credits">New Credits:</string>
    <string name="new_gpa">New GPA:</string>
    <string name="give_it_a_name_ex_upto_sem_1">Give A Name Tag : (Ex : Upto Sem 1)</string>
    <string name="new_item">New Item</string>
    <string name="name_ex_upto_sem_3">Name: (Ex : upto Sem 3)</string>
    <string name="credits">Credits:</string>
    <string name="cgpa">CGPA:</string>

    <string-array name="subjects">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="semesters">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="credits">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>

    <string-array name="grades">
        <item>O</item>
        <item>A+</item>
        <item>A</item>
        <item>B+</item>
        <item>B</item>
    </string-array>
</resources>
