<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="horizontal"
    android:padding="10dp"
    android:background="@drawable/text_background"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_weight="0.95"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/serial_no_id"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/_1"
            android:textSize="12sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/gpa_id"
                android:layout_height="match_parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="numberDecimal"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_gpa"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/credits_id"
                android:layout_height="match_parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="numberDecimal"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_credits"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>