<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="horizontal"
    android:padding="3dp"
    android:layout_margin="15dp"
    android:background="@drawable/text_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/serial_no_id"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/_1"
            android:textSize="12sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_gravity="start|center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textStyle="bold"
                android:text="@string/credit"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center|end"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Spinner
                android:id="@+id/spinner_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_gravity="start|center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textStyle="bold"
                android:text="@string/grade"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center|end"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Spinner
                android:id="@+id/spinner_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>